# semantic-search

./: .gitignore  LICENSE  cli.py  main.py  model.py  pyproject.toml  semsearch.py
src/: engine.py  model.py
tests/: test_cats.json  test_cats.py
