[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search"
version = "0.1.0"
description = "A Python project for semantic search using sentence embeddings."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "sentence-transformers",
]

[tool.pytest.ini_options]
pythonpath = ["src"]